# fitness-data-sync

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  schema.sql
docs/: architecture.md  commands.md  data-availability.md
garmin_sync/: __init__.py  cli.py  config.py  db.py  export.py  garmin_client.py  mcp_server.py  models.py  normalise.py  queries.py  rate_limit.py  repositories.py  sync_engine.py
tests/: conftest.py  test_detail_sync.py  test_export.py  test_health_sync.py  test_idempotency.py  test_intraday_sync.py  test_mcp_server.py  test_normalise.py  test_performance.py  test_performance_sync.py  test_queries.py  test_rate_limit.py  test_reprocess.py  test_resume.py  test_sample_sync.py
