[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-sync"
version = "0.1.0"
description = "Local, resumable, idempotent Garmin Connect data mirror"
requires-python = ">=3.12"
dependencies = [
    "garminconnect>=0.2.19",
    "typer>=0.12.0",
    "pydantic-settings>=2.3.0",
]

[project.scripts]
garmin-sync = "garmin_sync.cli:app"
garmin-sync-mcp = "garmin_sync.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]
parquet = [
    "pyarrow>=16.0.0",
    "pandas>=2.2.0",
]
mcp = [
    "mcp>=1.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["garmin_sync*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
